Tue Mar  1 21:16:54 2005  K.Kosako <sndgk393 AT ybb.ne.jp>

	* regcomp.c (optimize_node_left): uninitialized member
	  (OptEnv.backrefed_status) was used. [ruby-dev:25778]

Tue Mar  1 00:40:35 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/tuplespace.rb (Rinda::TupleSpace): improved keeper thread.

	* test/rinda/test_rinda.rb: ditto.


Mon Feb 28 23:10:13 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/socket/socket.c (Init_socket): IPv6 is not supported although
	  AF_INET6 is defined on bcc32. (rev1.108 again)

	* ext/socket/mkconstants.rb: ditto.

Mon Feb 28 21:55:49 2005  K.Kosako <sndgk393 AT ybb.ne.jp>

	* ext/strscan/strscan.c (strscan_s_allocate):
	  use onig_region_init().

	* ext/strscan/strscan.c (adjust_registers_to_matched):
	  use onig_region_set().

Mon Feb 28 15:12:06 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/socket/socket.c (Init_socket): ported more Socket::Constants
	  from ruby_1_8, and made it easy to add new constants.
	  [ruby-dev:25771]

	* ext/socket/depend: ditto.

	* ext/socket/mkconstants.rb: ditto. (added)

Sun Feb 27 05:55:38 2005  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: fix typo. [ruby-core:04494]

Sat Feb 26 16:58:20 2005  K.Kosako <sndgk393 AT ybb.ne.jp>

	* parse.y, re.c, regex.h, LEGAL, ext/strscan/strscan.c:
	  remove oniggnu.h (GNU regex API).

Wed Feb 23 22:08:16 2005  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* st.c, st.h: imported additional file changes on
	  Oniguruma 3.7.0.

Wed Feb 23 21:45:29 2005  Kazuo Saito  <ksaito@uranus.dti.ne.jp>

	* ascii.c, euc_jp.c, oniggnu.h, oniguruma.h, regcomp.c,
	  regenc.c, regenc.h, regerror.c, regexec.c, regint.h,
	  regparse.c, regparse.h, sjis.c, utf8.c: imported Oni Guruma
	  3.7.0.

Thu Feb 23 15:04:32 2005  akira yamada  <akira@ruby-lang.org>

	* lib/uri/generic.rb (split_userinfo): should split ":pass" into ""
	  and "pass".  [ruby-dev:25667]

Wed Feb 23 01:53:29 2005  Shugo Maeda  <shugo@ruby-lang.org>
